session_1/summary.txt
Code: 
print("Hello Core2Web")

Output:
 Hello Core2Web

Explanation: first program
==================

Code: 
x = 30
for i in range(10):
	print("Hello Core2Web")

Output:
 Hello Core2Web
Hello Core2Web
Hello Core2Web
Hello Core2Web
Hello Core2Web
Hello Core2Web
Hello Core2Web
Hello Core2Web
Hello Core2Web
Hello Core2Web

Explanation: for loop first code
==================

Code: 
print("hello")

Output:
 hello

Explanation: this is simple hello 
==================

Code: 
print("Hello core2web")

Output:
 Hello core2web

Explanation: this is my first simple program
==================

Code: 
print(h

Output:
   File "/home/abhishekaslk/Desktop/SuperX/Temporal-DEV/sessions/session_1/program5.py", line 1
    print(h
         ^
SyntaxError: '(' was never closed

Explanation: we need to closed bracket
==================

